--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,17 @@
 } */
 
 
-.portfolio-logo {
+/* .portfolio-logo {
   background: url(https://gist.githack.com/DjangoAddict/fb1f811b0fbcdc81674f91f72fd68bc4/raw/94d824ce35529ecf2e6a3a161776268a1dad16b5/logo.svg) 50% no-repeat;
+  background-size: cover;
+  height: 150px;
+  width: 150px;
+  margin: auto auto 10px;
+} */
+
+
+.portfolio-logo {
+  background: url(https://gistcdn.githack.com/DjangoAddict/ce86502736e571f929bd415f29b4203b/raw/d6aaac9ea27c83ed43f83f3e4e561acad806495f/gtlogo.svg) 50% no-repeat;
   background-size: cover;
   height: 150px;
   width: 150px;
