--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,27 @@
 
 
 
+/* see more button  */
+.see_button {
+  position: absolute;
+  right: 2%;
+  top: 60px;
+  display: flex;
+  flex-direction: column;
+}
 
+.see_button a {
+  font-family: sans-serif;
+  font-size: 12px;
+  text-decoration: none;
+  padding: 2px 0px;
+  color: white !important;
+}
+
+.see_button i {
+  position: relative;
+  left: -13px;
+}
 
 
 /* end of logo code  */
